# A-Eigen-Solver

./: .gitignore  CMakeLists.txt  readme.md
app/: CMakeLists.txt  CurveFitting.cpp  NoLinearLeastSquares3.cpp
backend/: CMakeLists.txt  edge.cc  edge.h  eigen_types.h  problem.cc  problem.h  vertex.cc  vertex.h
test/: CMakeLists.txt  MatDecomposition.cpp  NoLinearLeastSquares.cpp  RTTI.cpp  TestEigen.cpp  curvefitting.cpp  curvefitting3V.cpp
utils/: tic_toc.h
xmind/: 求解器(problem).xmind
